// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List render with list header  1`] = `
<DocumentFragment>
  <ul
    class="list-group list-group-flush"
  >
    <li
      class="list-group-item shadow-sm"
    >
      <h5
        class="mt-3"
      >
        Mock Header
      </h5>
    </li>
    <li
      class="list-group-item"
    >
      <div>
        mock item 1
      </div>
    </li>
    <li
      class="list-group-item"
    >
      <div>
        mock item 2
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`List render without list header  1`] = `
<DocumentFragment>
  <ul
    class="list-group list-group-flush"
  >
    <li
      class="list-group-item"
    >
      <div>
        mock item 1
      </div>
    </li>
    <li
      class="list-group-item"
    >
      <div>
        mock item 2
      </div>
    </li>
  </ul>
</DocumentFragment>
`;
